# egx-portfolio-manager

./: .gitignore  CLAUDE.md  README.md  app.py  config.yaml  pyproject.toml
deploy/: crontab
docs/: EGX_Investment_OS_Architecture_v1.0.docx  progress.md
egxpm/: record_corporate_action.py  record_holding.py  run_collection.py  run_longterm.py  run_review.py  run_swing.py  scoring_pipeline.py
egxpm/collectors/: collector_service.py  corporate_actions_collector.py  egx_disclosure_collector.py  ensure_fresh_data.py  fundamentals_collector.py  news_collector.py  price_collector.py  source_health_service.py  (+1 more)
tests/: conftest.py  test_allocation_calculator.py  test_checkpoint_a.py  test_checkpoint_b.py  test_collector_service.py  test_confidence_engine.py  test_config.py  test_context_aggregator.py  test_context_export.py  test_copilot_session.py  test_corporate_actions_collector.py  test_dashboard.py  test_dashboard_read_repository_extensions.py  test_egx_disclosure_collector.py  test_ensure_fresh_data.py  test_financial_engine.py  test_i18n.py  test_llm_client.py  test_m4_pipeline_integration.py  test_models.py  test_news_engine.py  test_portfolio_engine.py  test_position_sizing_engine.py  test_prompts.py  test_recommendation_analytics.py  test_record_corporate_action.py  test_record_holding.py  test_repositories.py  test_risk_engine.py  test_run_longterm.py  test_run_review.py  test_run_swing.py  test_run_swing_integration.py  test_scoring_engine.py  test_section8_amendments_live.py  test_source_health_service.py  test_technical_engine.py  test_tool_registry.py
(+31 files in other folders)
