[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egxpm"
version = "0.1.0"
description = "EGX Investment Operating System"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "pandas-ta-classic>=0.0.5",
    "yfinance>=0.2.40",
    "tradingview-ta>=3.3.0",
    "anthropic>=0.40.0",
    "pydantic>=2.8.0",
    "streamlit>=1.40.0",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "python-dotenv>=1.0.0",
    "plotly>=5.24.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pyyaml>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
